@@ -2193,7 +2193,8 @@ expandMacro(MacroBuf mb)
     return rc;
 }
 
-#if !defined(POPT_ERROR_BADCONFIG)	/* XXX popt-1.15- retrofit */
+#if defined(RPM_VENDOR_OPENPKG) /* stick-with-rpm-file-sanity-checking */ || \
+    !defined(POPT_ERROR_BADCONFIG)	/* XXX POPT 1.15 retrofit */
 int rpmSecuritySaneFile(const char *filename)
 {
     struct stat sb;
@@ -2596,7 +2597,8 @@ rpmInitMacros(MacroContext mc, const char * macrofiles)
 
 	if (fn[0] == '@' /* attention */) {
 	    fn++;
-#if !defined(POPT_ERROR_BADCONFIG)	/* XXX popt-1.15- retrofit */
+#if defined(RPM_VENDOR_OPENPKG) /* stick-with-rpm-file-sanity-checking */ || \
+    !defined(POPT_ERROR_BADCONFIG)	/* XXX POPT 1.15 retrofit */
 	    if (!rpmSecuritySaneFile(fn))
 #else
 	    if (!poptSaneFile(fn))
