@@ -554,7 +554,8 @@ rpmioInit(int argc, char *const argv[], struct poptOption * optionsTable)
 /*@=nullpass =temptrans@*/
 
 #ifdef	NOTYET
-#if !defined(POPT_ERROR_BADCONFIG)	/* XXX popt-1.15- retrofit */
+#if defined(RPM_VENDOR_OPENPKG) /* stick-with-rpm-file-sanity-checking */ || \
+    !defined(POPT_ERROR_BADCONFIG)	/* XXX POPT 1.15 retrofit */
   { char * path_buf = xstrdup(rpmpoptfiles);
     char *path;
     char *path_next;
@@ -579,7 +580,6 @@ rpmioInit(int argc, char *const argv[], struct poptOption * optionsTable)
         /* work-off each resulting file from the path element */
         for (i = 0; i < ac; i++) {
             const char *fn = av[i];
-#if defined(RPM_VENDOR_OPENPKG) /* security-sanity-check-rpmpopt-and-rpmmacros */
             if (fn[0] == '@' /* attention */) {
                 fn++;
                 if (!rpmSecuritySaneFile(fn)) {
@@ -587,7 +587,6 @@ rpmioInit(int argc, char *const argv[], struct poptOption * optionsTable)
                     continue;
                 }
             }
-#endif
             (void)poptReadConfigFile(optCon, fn);
             av[i] = _free(av[i]);
         }
